force-app/main/default/objects/Notification_Subscriber__c/Notification_Subscriber__c.object-meta.xml
<CustomObject>
    <label>Notification Subscriber</label>
    <nameField>
        <displayFormat>NTR-{00000}</displayFormat>
        <label>Notification Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>