force-app/main/default/objects/Notification_Subscriber__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification</label>
    <referenceTo>Notification__c</referenceTo>
    <relationshipLabel>Notification Subscribers</relationshipLabel>
    <relationshipName>Notification_Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>